--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,5 +13,5 @@ elseif(UNIX AND NOT APPLE)
     pkg_check_modules(OPENCV5 opencv5 REQUIRED)
     include_directories(${OPENCV5_INCLUDE_DIRS})
     add_executable(opencv_tutorial01 main.cpp)
-    target_link_libraries(opencv_tutorial01 PRIVATE ${OpenCV_LIBRARIES})
+    target_link_libraries(opencv_tutorial01 PRIVATE ${OPENCV5_LIBRARIES})
 endif()
